# larsoft

./: .gitignore  CMakeLists.txt  TEST_COMMIT_MAIL
doc/: CMakeLists.txt  FullSourceDoxyfile.in  LocalSourceDoxyfile.in  README.md  SourceDoxyfile.in
doc/implementation-plan/: Capabilities.tex  Repositories.tex  lartpc-implementation-plan.aux  lartpc-implementation-plan.out  lartpc-implementation-plan.tex  lartpc-implementation-plan.toc  latex.mk  memarticle.cls
doc/nim/: larpaper.tex
releaseDB/: CMakeLists.txt
